--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
                 <img src="logo.png" width="154" height="62" alt="Логотип магазина «Глейси»">
                 </a>
                 <ul class="site-navigation">
-                    <li><a href="catalog.html">Каталог</a></li>
-                    <!-- Попап навигации -->
-                    <ul class="site-navigation-popup">
-                        <li class="new-item"><a href="#">Новинки</a></li>
-                        <li><a href="#">Сливочное</a></li>
-                        <li><a href="#">Щербеты</a></li>
-                        <li><a href="#">Фруктовый лед</a></li>
-                        <li><a href="#">Мелонин</a></li>
-                    </ul>
+                    <li>
+                        <a href="catalog.html">Каталог</a>
+                        <!-- Попап навигации -->
+                        <ul class="site-navigation-popup">
+                            <li class="new-item"><a href="#">Новинки</a></li>
+                            <li><a href="#">Сливочное</a></li>
+                            <li><a href="#">Щербеты</a></li>
+                            <li><a href="#">Фруктовый лед</a></li>
+                            <li><a href="#">Мелонин</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#">Доставка и оплата</a></li>
                     <li><a href="#">О Компании</a></li>
                 </ul>
                 <div class="search-link">Поиск</div>
                 <!-- Попап поиска -->
                 <form class="search-link-popup" name="search-form" id="search" action="url" method="get" >
-                        <input type="text" name="input-searh" id="what-search" placeholder="Что ищем?">
+                    <input type="text" name="input-searh" id="what-search" placeholder="Что ищем?">
                 </form>
                 <div class="login-link">Вход</div>
                 <!-- Попап входа -->
@@ -55,7 +57,7 @@
                     <!-- предпологаемое место для переключателей слайдера, подписи для стилизации -->
                     <label class="slide-offer-switch" for="btn1"></label>
                     <input type="radio" name="slide-offer-switch" id="btn1" checked>
-                    <label class="slide-offer-switch"for="btn2" ></label>
+                    <label class="slide-offer-switch" for="btn2" ></label>
                     <input type="radio" name="slide-offer-switch" id="btn2">
                     <label class="slide-offer-switch" for="btn3"></label>
                     <input type="radio" name="slide-offer-switch" id="btn3">
@@ -186,7 +188,7 @@
                     </p>
                     <button class="feed-back-btn">Форма обратной связи</button>
                     <!-- Попап обратной связи -->
-                    <form class="feed-back-popup"name="feed-back-form" id="back" action="url" method="post">
+                    <form class="feed-back-popup" name="feed-back-form" id="back" action="url" method="post">
                         <strong>Мы обязательно вам ответим!</strong>
                         <input type="text" name="name" id="name" placeholder="Как вас зовут?">
                         <input type="email" name="email-feed-back" id="email-feed-back-id" placeholder="Ваша почта для ответа">
