Добавленна контентная графика
Добавленна контентная графика, по заданию.

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
         <header class="main-header">
             <nav class="main-navigation">
                 <a class="main-header-logo" href="index.html">
-                <img src="logo.png" width="154" height="62" alt="Логотип магазина «Глейси»">
+                <img src="img\logo.svg" width="154" height="62" alt="Логотип магазина «Глейси»">
                 </a>
                 <ul class="site-navigation">
                     <li>
@@ -16,7 +16,7 @@
                         <!-- Попап навигации -->
                         <ul class="site-navigation-popup">
                             <li class="new-item"><a href="#">Новинки</a></li>
-                            <li><a>Сливочное</a></li>
+                            <li>Сливочное</a></li>
                             <li><a href="#">Щербеты</a></li>
                             <li><a href="#">Фруктовый лед</a></li>
                             <li><a href="#">Мелонин</a></li>
@@ -34,14 +34,14 @@
                         <caption class="visually-hidden">Товары в корзине</caption>
                         <tr>
                             <td><button class="basket-remove">Удалить</button></td>
-                            <td><img src="http://placehold.it/33x33" width="33" height="33" alt="Пломбир с апельсиновым джемом"></td>
+                            <td><img src="img\icon-ice-cream-1.jpg" width="33" height="33" alt="Пломбир с апельсиновым джемом"></td>
                             <td>Пломбир с апельсиновым джемом</td>
                             <td>1,5 кг х <span>200 руб.</span></td>
                             <td>300 руб.</td>
                         </tr>
                         <tr>
                             <td><button class="basket-remove">Удалить</button></td>
-                            <td><img src="http://placehold.it/33x33" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада">
+                            <td><img src="img\icon-ice-cream-2.jpg" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада">
                             <td>Клубничный пломбир с присыпкой из белого шоколада</td>
                             <td>1,5 кг х <span>300 руб.</span></td>
                             <td>450 руб.</td>
@@ -116,60 +116,60 @@
                 <h2 class="visually-hidden">Список видов сливочного мороженного</h2>
                 <ul class="catalog-list">
                     <li class="catalog-item">
-                        <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                        <img src="img\ice-cream-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
                         <p class="catalog-item-price">310₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
                     </li>
                     <li class="catalog-item">
-                        <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+                        <img src="img\goods\ice-cream-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
                         <p class="catalog-item-price">380₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title>">Сливочно-кофейное с кусочками шоколада</h3>
                     </li>
                     <li class="catalog-item">
-                        <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                        <img src="img\goods\ice-cream-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                         <p class="catalog-item-price">355₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочно-клубничное с присыпкой из белого шоколада</h3>
                     </li>
                     <li class="catalog-item">
-                        <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+                        <img src="img\goods\ice-cream-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
                         <p class="catalog-item-price">415₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочное крем-брюле с карамельной подливкой</h3>
                     </li>
                     <li class="catalog-item">
-                        <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочное с брусничным джемом">
+                        <img src="img\goods\ice-cream-5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
                         <p class="catalog-item-price">325₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочное с брусничным джемом</h3>
                     </li>
                     <li class="catalog-item">
-                        <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
+                        <img src="img\goods\ice-cream-6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
                         <p class="catalog-item-price">410₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочно-черничное с цельными ягодами черники</h3>
                     </li>
                     <li class="catalog-item">
-                        <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
+                        <img src="img\goods\ice-cream-7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
                         <p class="catalog-item-price">375₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочно-лимонное с карамельной присыпкой</h3>
                     <li class="catalog-item">
-                        <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочное с шоколадной стружкой">
+                        <img src="img\goods\ice-cream-8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
                         <p class="catalog-item-price">320₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочное с шоколадной стружкой</h3>
                     </li>
                     <li class="catalog-item">
-                        <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
+                        <img src="img\goods\ice-cream-9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
                         <p class="catalog-item-price">440₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочно-ванильное с кусочками шоколада</h3>
                     </li>
                     <li class="catalog-item">
-                        <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
+                        <img src="img\goods\ice-cream-10.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
                         <p class="catalog-item-price">435₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочноe с ментоловым сиропом</h3>
                     <li class="catalog-item">
-                        <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
+                        <img src="img\goods\ice-cream-11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
                         <p class="catalog-item-price">355₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочное с кусочками черного шоколада</h3>
                     </li>
                     <li class="catalog-item">
-                        <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочное с мятным сиропом">
+                        <img src="img\goods\ice-cream-12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
                         <p class="catalog-item-price">420₽<span class="weight">/кг</span></p>
                         <h3 class="catalog-item-title">Сливочное с мятным сиропом</h3>
                     </li>
@@ -201,7 +201,7 @@
             </div>
             <div class="footer-copyright">
                 <a class="logo-creators" href="https://htmlacademy.ru/intensive/htmlcss">
-                <img src="logo-htmlacademy.png" width="107" height="38" alt="Логотип HTML Academy"></a>
+                <img src="img\logo-htmlacademy.svg" width="107" height="38" alt="Логотип HTML Academy"></a>
                 <p>Сделано в <a class="link-creators" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>&#169; 2017</p>
             </div>
         </footer>
