--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <header class="main-header">
             <nav class="main-navigation">
                 <a class="main-header-logo" href="index.html">
-                <img src="logo.png" width="154" height="62" alt="Логотип магазина «Глейси»">
+                <img src="img\logo.svg" width="154" height="62" alt="Логотип магазина «Глейси»">
                 </a>
                 <ul class="site-navigation">
                     <li>
@@ -84,7 +84,7 @@
                     <li class="best-item">
                         <p class="catalog-item-image">
                             <a href="catalog.html">
-                            <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                            <img src="img\goods\ice-cream-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
                             </a>
                         </p>
                         <p class="catalog-item-price">310₽<span class="weight">/кг</span></p>
@@ -97,7 +97,7 @@
                     <li class="best-item">
                         <p class="catalog-item-image">
                             <a href="catalog.html">
-                            <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+                            <img src="img\goods\ice-cream-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
                             </a>
                         </p>
                         <p class="catalog-item-price">380₽<span class="weight">/кг</span></p>
@@ -110,7 +110,7 @@
                     <li class="best-item">
                         <p class="catalog-item-image">
                             <a href="catalog.html">
-                            <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                            <img src="img\goods\ice-cream-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                             </a>
                         </p>
                         <p class="catalog-item-price">355₽<span class="weight">/кг</span></p>
@@ -123,7 +123,7 @@
                     <li class="best-item">
                         <p class="catalog-item-image">
                             <a href="catalog.html">
-                            <img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+                            <img src="img\goods\ice-cream-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
                             </a>
                         </p>
                         <p class="catalog-item-price">415₽<span class="weight">/кг</span></p>
@@ -176,7 +176,7 @@
             <section class="contacts">
                 <h2 class="visually-hidden">Адрес и телефон</h2>
                 <p class="map">
-                    <img src="http://placehold.it/1200x430" width="1200" height="430" alt="Карта">
+                    <img src="img\map(temp).jpg" width="1200" height="430" alt="Карта">
                 </p>
                 <div class="contacts-info">
                     <p>Адрес главного офиса и офлайн-магазина:
@@ -218,7 +218,7 @@
             </div>
             <div class="footer-copyright">
                 <a class="logo-creators" href="https://htmlacademy.ru/intensive/htmlcss">
-                <img src="logo-htmlacademy.png" width="107" height="38" alt="Логотип HTML Academy"></a>
+                <img src="img\logo-htmlacademy.svg" width="107" height="38" alt="Логотип HTML Academy"></a>
                 <p>Сделано в <a class="link-creators" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>&#169; 2017</p>
             </div>
         </footer>
