Добавлены картинки слайдера

--- a/catalog.html
+++ b/catalog.html
@@ -72,7 +72,7 @@
                 <h2 class="visually-hidden">Фильтр товаров</h2>
                 <!-- Черновик формы, еще не доделано -->
                 <div class="filters-form-wrap">
-                    <form name="filter" id="filter-id" action="url" method="post">
+                    <form name="filter" id="filter-id" action="" method="post">
                         <fieldset>
                             <legend>Сортировка</legend>
                             <select name="filter-kind" id="kind">
