--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <section class="slider">
                 <h2 class="visually-hidden">Предложение</h2>
                 <div class="slide-offer">
-                    <img src="http://placehold.it/367x582" width="367" height="582" alt="Крем-брюле и пломбир с малиновым джемом">
+                    <img src="img\ice-cream-promo-1.png" width="647" height="584" alt="Крем-брюле и пломбир с малиновым джемом">
                     <!-- При вставке картинки исправить размер -->
                     <p>Крем-брюле и пломбир с малиновым джемом</p>
                     <!-- предпологаемое место для переключателей слайдера, подписи для стилизации -->
