Добавлена недостающая графика
Заменены иконки мороженого  в png. Добавлены фоны блоков, маркер карты( для товаров и промофонов сделана временная папка с  вариантами в png.) И папка для c svg.

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
         <header class="main-header">
             <nav class="main-navigation">
                 <a class="main-header-logo" href="index.html">
-                <img src="img\logo.svg" width="154" height="62" alt="Логотип магазина «Глейси»">
+                <img src="img\svg\logo.svg" width="154" height="62" alt="Логотип магазина «Глейси»">
                 </a>
                 <ul class="site-navigation">
                     <li>
@@ -34,14 +34,14 @@
                         <caption class="visually-hidden">Товары в корзине</caption>
                         <tr>
                             <td><button class="basket-remove">Удалить</button></td>
-                            <td><img src="img\icon-ice-cream-1.jpg" width="33" height="33" alt="Пломбир с апельсиновым джемом"></td>
+                            <td><img src="img\icon-ice-cream-1.png" width="33" height="33" alt="Пломбир с апельсиновым джемом"></td>
                             <td>Пломбир с апельсиновым джемом</td>
                             <td>1,5 кг х <span>200 руб.</span></td>
                             <td>300 руб.</td>
                         </tr>
                         <tr>
                             <td><button class="basket-remove">Удалить</button></td>
-                            <td><img src="img\icon-ice-cream-2.jpg" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада">
+                            <td><img src="img\icon-ice-cream-2.png" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада">
                             <td>Клубничный пломбир с присыпкой из белого шоколада</td>
                             <td>1,5 кг х <span>300 руб.</span></td>
                             <td>450 руб.</td>
@@ -201,7 +201,7 @@
             </div>
             <div class="footer-copyright">
                 <a class="logo-creators" href="https://htmlacademy.ru/intensive/htmlcss">
-                <img src="img\logo-htmlacademy.svg" width="107" height="38" alt="Логотип HTML Academy"></a>
+                <img src="img\svg\logo-htmlacademy.svg" width="107" height="38" alt="Логотип HTML Academy"></a>
                 <p>Сделано в <a class="link-creators" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>&#169; 2017</p>
             </div>
         </footer>
