--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <header class="main-header">
             <nav class="main-navigation">
                 <a class="main-header-logo" href="index.html">
-                <img src="img\logo.svg" width="154" height="62" alt="Логотип магазина «Глейси»">
+                <img src="img\svg\logo.svg" width="154" height="62" alt="Логотип магазина «Глейси»">
                 </a>
                 <ul class="site-navigation">
                     <li>
@@ -218,7 +218,7 @@
             </div>
             <div class="footer-copyright">
                 <a class="logo-creators" href="https://htmlacademy.ru/intensive/htmlcss">
-                <img src="img\logo-htmlacademy.svg" width="107" height="38" alt="Логотип HTML Academy"></a>
+                <img src="img\svg\logo-htmlacademy.svg" width="107" height="38" alt="Логотип HTML Academy"></a>
                 <p>Сделано в <a class="link-creators" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>&#169; 2017</p>
             </div>
         </footer>
